fix:exit fullscreen on firefox browser

--- a/src/components/statistic/Statistic.scss
+++ b/src/components/statistic/Statistic.scss
@@ -1,3 +1,7 @@
 .site-layout-background {
  background: #fff;
 }
+
+.stat__list {
+  background-color: #fafafa;
+}
